logs/gopigo3.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Examples'...
Listing './lib/python3.5/site-packages/Examples/Control_Panel'...
Compiling './lib/python3.5/site-packages/Examples/Control_Panel/control_panel_gui_3.py'...
***   File "./lib/python3.5/site-packages/Examples/Control_Panel/control_panel_gui_3.py", line 17
    raise ImportError,"The wxPython module is required to run this program"
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Examples/Grove_US2.py'...
***   File "./lib/python3.5/site-packages/Examples/Grove_US2.py", line 57
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Examples/Line_Sensor'...
Listing './lib/python3.5/site-packages/gopigo3-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/mock_package'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spidev-3.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
